--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_chip"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_chip_round"
         android:supportsRtl="true">
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
             android:theme="@style/MyEmulatorTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".EditorActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/MyEmulatorTheme"/>
+        <activity
+            android:name=".EmulateActivity"
+            android:label="Status"
+            android:screenOrientation="portrait"
+            android:theme="@style/MyEmulatorTheme" />
     </application>
 
 </manifest>
