--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation 'com.jmedeisis:draglinearlayout:1.1.0'
     implementation 'com.github.AmrDeveloper:CodeView:1.0.0'
 }
