--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".ui.EmulateActivity"
             android:label="Status"
             android:screenOrientation="portrait"
-            android:theme="@style/MyEmulatorTheme2" />
+            android:theme="@style/MyEmulatorTheme" />
         <activity
             android:name=".ui.SettingsActivity"
             android:label="Settings"
@@ -39,12 +39,12 @@
             android:name=".ui.HelpActivity"
             android:label="Help"
             android:screenOrientation="portrait"
-            android:theme="@style/MyEmulatorTheme2" />
+            android:theme="@style/MyEmulatorTheme" />
         <activity
             android:name=".ui.TemplateActivity"
             android:label="Templates"
             android:screenOrientation="portrait"
-            android:theme="@style/MyEmulatorTheme2" />
+            android:theme="@style/MyEmulatorTheme" />
     </application>
 
 </manifest>
