--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_14
-        targetCompatibility JavaVersion.VERSION_14
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.github.AmrDeveloper:CodeView:1.0.0'
     implementation 'com.github.HBiSoft:PickiT:0.1.14'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.elconfidencial.bubbleshowcase:bubbleshowcase:1.3.1'
 
     implementation( 'com.github.thekhaeng:pushdown-anim-click:1.1.1' ){
         exclude group: 'com.android.support'
