--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true">
         <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/app_name"
+            android:name=".ui.SplashActivity"
             android:theme="@style/MyEmulatorTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/MyEmulatorTheme"/>
         <activity
             android:name=".ui.EditorActivity"
             android:label="Editor"
@@ -34,7 +38,7 @@
             android:name=".ui.SettingsActivity"
             android:label="Settings"
             android:screenOrientation="portrait"
-            android:theme="@style/MyEmulatorTheme2" />
+            android:theme="@style/MyEmulatorTheme" />
         <activity
             android:name=".ui.HelpActivity"
             android:label="Help"
@@ -43,6 +47,10 @@
         <activity
             android:name=".ui.TemplateActivity"
             android:label="Templates"
+            android:screenOrientation="portrait"
+            android:theme="@style/MyEmulatorTheme" />
+        <activity
+            android:name=".ui.AboutActivity"
             android:screenOrientation="portrait"
             android:theme="@style/MyEmulatorTheme" />
     </application>
