--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -48,6 +51,9 @@ dependencies {
     implementation 'com.github.HBiSoft:PickiT:0.1.14'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.elconfidencial.bubbleshowcase:bubbleshowcase:1.3.1'
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
 
     implementation( 'com.github.thekhaeng:pushdown-anim-click:1.1.1' ){
         exclude group: 'com.android.support'
